--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,28 +1,31 @@
 name: Publish
+
 on:
   push:
   release:
     types: [ published ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
       MAVEN_USERNAME: ${{ vars.MAVEN_USERNAME }}
       MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Check out source
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Setup Java
-        uses: actions/setup-java@v3
+      - name: Set up Java
+        uses: actions/setup-java@v4
         with:
           distribution: zulu
-          java-version: 17
+          java-version: '17'
           cache: gradle
 
-      - name: Setup Gradle
+      - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
 
       - name: Build and Publish
@@ -51,8 +54,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'release'
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Check out source
+        uses: actions/checkout@v4
 
       - name: Download youtube-common Artifact
         uses: actions/download-artifact@v3
