--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,19 +32,19 @@ jobs:
         run: ./gradlew build publish --no-daemon -PMAVEN_USERNAME=$MAVEN_USERNAME -PMAVEN_PASSWORD=$MAVEN_PASSWORD
 
       - name: Upload common Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: youtube-common.jar
           path: common/build/libs/youtube-common-*.jar
 
-      - name: Upload lldevs Artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload v2 Artifact
+        uses: actions/upload-artifact@v4
         with:
           name: youtube-v2.jar
           path: v2/build/libs/youtube-v2-*.jar
 
       - name: Upload plugin Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: youtube-plugin.jar
           path: plugin/build/libs/youtube-plugin-*.jar
@@ -58,17 +58,17 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download youtube-common Artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: youtube-common.jar
 
       - name: Download youtube-v2 Artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: youtube-v2.jar
 
       - name: Download youtube-plugin Artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: youtube-plugin.jar
 
